--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/frontend/node_modules
+/front-angular/node_modules
 /backend/node_modules
 /.pnp
 .pnp.js
+/front-angular/.angular/*
 
 # testing
 /coverage
